# tealtree

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_linux.sh  build_mac.sh  build_windows.cmd
examples/: .gitignore
examples/MSLR/: feature_names.txt  run.sh  run1.sh~  run_10percent.sh
examples/binary_classification/: feature_names.txt  run.cmd  run.sh
examples/ranker/: run.sh
examples/regression/: feature_names.txt  run.cmd  run.sh
include/: ThreadPool.h
src/: blocking_queue.h  buckets_collection.cpp  buckets_collection.h  buffer.h  cereal.h  circular_buffer.h  column_consumer.h  compact_vector.h  cost_function.cpp  cost_function.h  dense_feature.cpp  dense_feature.h  document.h  enum_factory.h  evaluator.h  fast_sparse_feature.cpp  fast_sparse_feature.h  feature.cpp  feature.h  feature_metadata.cpp  feature_metadata.h  gheap.h  histogram.cpp  histogram.h  line_reader.cpp  line_reader.h  log_trivial.cpp  log_trivial.h  main.cpp  md5.cpp  md5.h  metric.cpp  metric.h  options.cpp  options.h  ranking_cost_function.cpp  ranking_cost_function.h  raw_feature.cpp  raw_feature.h  raw_feature_histogram.cpp  (+29 more)
tools/: evaluate.py  print_tree.py  test.py
